# libfranka-release

./: 0001-Added-install-rule-for-package.xml.patch  0001-Customized-Debian-rules-file.patch  0001-Customized-RPM-template-file.patch  0002-Build-examples.patch  0002-Enable-tests.patch  0002-Install-into-catkin-locations.patch  0003-Disable-documentation.patch  0004-Build-examples.patch  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rosdoc.yaml  rpm.store  tracks.yaml
common/: .clang-format  CHANGELOG.md  CMakeLists.txt  NOTICE  README.md
common/include/research_interface/gripper/: types.h
common/include/research_interface/robot/: error.h  rbk_types.h  service_traits.h  service_types.h
common/include/research_interface/vacuum_gripper/: types.h
debian/: changelog  control  copyright  gbp.conf  rules  rules.em
examples/: CMakeLists.txt
foxy/: package.xml
kinetic/: package.xml
melodic/: package.xml
noetic/: package.xml
rpm/: ros-kinetic-libfranka.spec  ros-melodic-libfranka.spec  ros-noetic-libfranka.spec  template.spec  template.spec.em
